--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +39,7 @@ dependencies:
   google_fonts: ^4.0.3
   image_loader: ^1.6.0
   rxdart: ^0.27.7
+  flutter_screenutil: ^5.6.1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/
+    - lib/assets/images/
+    - lib/assets/svg/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -93,3 +96,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
