--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   image_loader: ^1.6.0
   rxdart: ^0.27.7
   flutter_screenutil: ^5.6.1
+  form_field_validator: ^1.1.0
+  intl_utils: ^2.8.2
+  custom_progress_button: ^1.0.2
+  flutter_spinkit: ^5.1.0
+  enough_mail: ^2.1.1
+  flutter_mail_server: ^0.0.2
 
 dev_dependencies:
   flutter_test:
