--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,17 @@ dependencies:
   flutter_spinkit: ^5.1.0
   enough_mail: ^2.1.1
   flutter_mail_server: ^0.0.2
+  retrofit: '>=4.0.0 <5.0.0'
+  logger: any  #for logging purpose
+  dio: ^5.0.2
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: '>=5.0.0 <6.0.0'
+  build_runner: '>=2.3.0 <4.0.0'
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -57,6 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
