finished second_form

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: first_form
+name: BROADCAST
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -52,6 +52,8 @@ dependencies:
   dio:
   retrofit:
   json_annotation:
+  flutter_launcher_icons_maker: ^0.10.2
+#  flutter_native_splash: ^2.2.19
 
 
 dev_dependencies:
@@ -109,3 +111,25 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_intl:
   enabled: true
+
+flutter_native_splash:
+  android: false
+  ios: false
+  web: true
+  color_web: "#ffffff"
+  color_dark_web: "#ffffff"
+  image_web: lib/assets/splash.png
+  image_dark_web: lib/assets/splash.png
+  web_image_mode: center
+  fullscreen: true
+
+flutter_icons:
+  android: false
+  ios: false
+  macos: false
+  windows: false
+  web: true
+  image_path: "lib/assets/images/logo.png"
+
+flutter_app_name:
+  name: "BROADCAST"
