--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,10 @@ dependencies:
   progress_dialog_null_safe:
   form_field_validator:
   flutter_dropzone: ^3.0.5
-  dio:
-  retrofit:
-  json_annotation:
+  retrofit: '>=4.0.0 <5.0.0'
+  logger: any  #for logging purpose
+  dio: ^5.0.2
+  json_annotation: ^4.8.0
   flutter_launcher_icons_maker: ^0.10.2
 #  flutter_native_splash: ^2.2.19
 
@@ -60,8 +61,8 @@ dev_dependencies:
 
   #  flutter_test:
   #    sdk: flutter
-  build_runner:
-  retrofit_generator:
+  retrofit_generator: '>=5.0.0 <6.0.0'
+  build_runner: '>=2.3.0 <4.0.0'
   flutter_launcher_icons:
 
 
